# Data_Engine

./: .clang-format  .gitignore  CMakeLists.txt  run.sh  sgconfig.yml
DATA_ENGINE/Data_Engine/SIMD/: SIMD.hpp
DATA_ENGINE/Data_Engine/SWAR/: test.hpp
DATA_ENGINE/Data_Structures/: Optimied_Tuple.hpp  Pointer_Array.hpp
DATA_ENGINE/Data_Structures/DS_internal/: DS_Design_internal.hpp  DS_Designer_helper.hpp  DS_constrains.hpp  DS_internal.hpp  Type_Implementation.hpp
DATA_ENGINE/Data_Structures/TYPES/: ix.hpp  ux.hpp
DATA_ENGINE/Data_Structures/common_utilities/: Optimized_Tuple_helper_Templates.hpp  Refernce_Types.hpp  Type_Group.hpp  common.hpp
Data_Engine/SWAR/: internal.hpp
Data_Structures/: Optimied_Tuple.hpp  Pointer_Array.hpp  TYPE.hpp
Data_Structures/DS_internal/: DS_Design_internal.hpp  DS_Designer_helper.hpp  DS_constrains.hpp  DS_internal.hpp  Type_Implementation.hpp
Data_Structures/TYPES/: fx.hpp
Data_Structures/common_utilities/: Optimized_Tuple_helper_Templates.hpp  Type_Group.hpp  common.hpp  constrains.hpp
Test/: main.cpp  testbed.hpp
